[gd_scene load_steps=30 format=3 uid="uid://cuyhn1eq7wiel"]

[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_atnnk"]
[ext_resource type="Shader" path="res://resources/psx.gdshader" id="1_eynlo"]
[ext_resource type="FontFile" uid="uid://dylmhtrnuvi3x" path="res://assets/Gabarito-VariableFont_wght.ttf" id="1_tr1bm"]
[ext_resource type="Script" path="res://scenes/options_menu.gd" id="2_27pr1"]
[ext_resource type="Shader" uid="uid://7y3j18ujwsfo" path="res://resources/materials/asphalt_shader.tres" id="4_c3gea"]
[ext_resource type="Texture2D" uid="uid://bhkw4x8qy14ph" path="res://assets/textures/asphalt_white.png" id="5_skhcj"]
[ext_resource type="Texture2D" uid="uid://chbcwtp80orhl" path="res://assets/textures/metal_white.png" id="6_y8x1r"]
[ext_resource type="PackedScene" uid="uid://bh4kga8q3w5mr" path="res://scenes/environment/road_section.tscn" id="7_kje0h"]
[ext_resource type="PackedScene" uid="uid://cu8yvpgr8tqo7" path="res://scenes/environment/parking_spaces.tscn" id="8_cmw8g"]
[ext_resource type="PackedScene" uid="uid://0suwukkww02l" path="res://scenes/environment/metal_pillar.tscn" id="8_mve25"]
[ext_resource type="PackedScene" uid="uid://bxwqaka10uvcy" path="res://scenes/environment/light_fixture.tscn" id="9_pn6mk"]
[ext_resource type="AudioStream" uid="uid://c3y22bn2i68uv" path="res://assets/audio/mus_wander.ogg" id="12_h7oej"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_40iiq"]
shader = ExtResource("1_eynlo")
shader_parameter/enabled = true
shader_parameter/dithering = true
shader_parameter/colors = 15
shader_parameter/dither_size = 1

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_brli1"]
sky_top_color = Color(0.0235294, 0.0235294, 0.0627451, 1)
sky_horizon_color = Color(0.0823529, 0.121569, 0.168627, 1)
ground_bottom_color = Color(0.0823529, 0.121569, 0.168627, 1)
ground_horizon_color = Color(0.0823529, 0.121569, 0.168627, 1)

[sub_resource type="Sky" id="Sky_dvcld"]
sky_material = SubResource("ProceduralSkyMaterial_brli1")

[sub_resource type="Environment" id="Environment_jp8y3"]
background_mode = 2
sky = SubResource("Sky_dvcld")
glow_enabled = true
glow_normalized = true
glow_bloom = 0.1
fog_enabled = true
fog_light_energy = 0.2
fog_sky_affect = 0.4

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_cbg1g"]
data = PackedVector3Array(50, 0, 50, -50, 0, 50, 50, 0, -50, -50, 0, 50, -50, 0, -50, 50, 0, -50)

[sub_resource type="PlaneMesh" id="PlaneMesh_f5ci4"]
size = Vector2(100, 100)

[sub_resource type="Gradient" id="Gradient_2nbj4"]
offsets = PackedFloat32Array(0.300813, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ax2xg"]
noise_type = 0
frequency = 0.1
fractal_octaves = 3
fractal_lacunarity = 1.5
fractal_gain = 1.0
fractal_weighted_strength = 1.0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_j3r2r"]
in_3d_space = true
seamless = true
color_ramp = SubResource("Gradient_2nbj4")
noise = SubResource("FastNoiseLite_ax2xg")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s7j7v"]
render_priority = 0
shader = ExtResource("4_c3gea")
shader_parameter/Color = Color(0.490196, 0.490196, 0.490196, 1)
shader_parameter/Texture = ExtResource("5_skhcj")
shader_parameter/NoiseTexture = SubResource("NoiseTexture2D_j3r2r")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uitbu"]
cull_mode = 2
albedo_texture = ExtResource("6_y8x1r")
uv1_triplanar = true
texture_filter = 2

[sub_resource type="BoxMesh" id="BoxMesh_5rrux"]
size = Vector3(100, 0.1, 100)

[sub_resource type="GDScript" id="GDScript_vvybf"]
script/source = "extends Node3D

const rotation_speed := 2.0

func _physics_process(delta):
	rotation.y += deg_to_rad(rotation_speed) * delta
"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g1nct"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vgwtm"]
bg_color = Color(0.180392, 0.180392, 0.180392, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Theme" id="Theme_otk44"]
Button/fonts/font = ExtResource("1_tr1bm")
Button/styles/focus = SubResource("StyleBoxEmpty_g1nct")
Label/fonts/font = ExtResource("1_tr1bm")
PanelContainer/styles/panel = SubResource("StyleBoxFlat_vgwtm")

[sub_resource type="GDScript" id="GDScript_34e8j"]
script/source = "extends CenterContainer

func _ready():
	hide()

func _on_done_button_pressed():
	hide()
"

[node name="CanvasLayer" type="CanvasLayer"]

[node name="Scene" type="SubViewportContainer" parent="."]
material = SubResource("ShaderMaterial_40iiq")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Scene"]
handle_input_locally = false
audio_listener_enable_3d = true
size = Vector2i(640, 480)
render_target_update_mode = 4

[node name="WorldEnvironment" type="WorldEnvironment" parent="Scene/SubViewport"]
environment = SubResource("Environment_jp8y3")

[node name="Environment" type="Node" parent="Scene/SubViewport"]

[node name="Ground" type="StaticBody3D" parent="Scene/SubViewport/Environment"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Scene/SubViewport/Environment/Ground"]
shape = SubResource("ConcavePolygonShape3D_cbg1g")

[node name="Mesh" type="MeshInstance3D" parent="Scene/SubViewport/Environment/Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0579395, -0.0149398, 0.0280228)
mesh = SubResource("PlaneMesh_f5ci4")
skeleton = NodePath("")
surface_material_override/0 = SubResource("ShaderMaterial_s7j7v")

[node name="Ceiling" type="StaticBody3D" parent="Scene/SubViewport/Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.6, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Scene/SubViewport/Environment/Ceiling"]
shape = SubResource("ConcavePolygonShape3D_cbg1g")

[node name="Mesh" type="MeshInstance3D" parent="Scene/SubViewport/Environment/Ceiling"]
material_override = SubResource("StandardMaterial3D_uitbu")
mesh = SubResource("BoxMesh_5rrux")
skeleton = NodePath("")

[node name="RoadSection" parent="Scene/SubViewport/Environment" instance=ExtResource("7_kje0h")]

[node name="Pillars" type="Node" parent="Scene/SubViewport/Environment"]

[node name="metal_pillar" parent="Scene/SubViewport/Environment/Pillars" instance=ExtResource("8_mve25")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 4)

[node name="metal_pillar2" parent="Scene/SubViewport/Environment/Pillars" instance=ExtResource("8_mve25")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 4)

[node name="metal_pillar3" parent="Scene/SubViewport/Environment/Pillars" instance=ExtResource("8_mve25")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -4)

[node name="metal_pillar4" parent="Scene/SubViewport/Environment/Pillars" instance=ExtResource("8_mve25")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -4)

[node name="metal_pillar7" parent="Scene/SubViewport/Environment/Pillars" instance=ExtResource("8_mve25")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -19)

[node name="metal_pillar8" parent="Scene/SubViewport/Environment/Pillars" instance=ExtResource("8_mve25")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -19)

[node name="metal_pillar9" parent="Scene/SubViewport/Environment/Pillars" instance=ExtResource("8_mve25")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 19)

[node name="metal_pillar10" parent="Scene/SubViewport/Environment/Pillars" instance=ExtResource("8_mve25")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 19)

[node name="Lights" type="Node" parent="Scene/SubViewport/Environment"]

[node name="LightFixture" parent="Scene/SubViewport/Environment/Lights" instance=ExtResource("9_pn6mk")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1, 5, 0)
skeleton = NodePath("")

[node name="LightFixture3" parent="Scene/SubViewport/Environment/Lights" instance=ExtResource("9_pn6mk")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -6, 5, 0)
skeleton = NodePath("")
flicker = true

[node name="LightFixture2" parent="Scene/SubViewport/Environment/Lights" instance=ExtResource("9_pn6mk")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 8, 5, 0)
skeleton = NodePath("")

[node name="LightFixture4" parent="Scene/SubViewport/Environment/Lights" instance=ExtResource("9_pn6mk")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1, 5, -8)
skeleton = NodePath("")

[node name="LightFixture5" parent="Scene/SubViewport/Environment/Lights" instance=ExtResource("9_pn6mk")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -6, 5, -8)
skeleton = NodePath("")

[node name="LightFixture6" parent="Scene/SubViewport/Environment/Lights" instance=ExtResource("9_pn6mk")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 8, 5, -8)
skeleton = NodePath("")
broken = true

[node name="LightFixture7" parent="Scene/SubViewport/Environment/Lights" instance=ExtResource("9_pn6mk")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1, 5, -15)
skeleton = NodePath("")

[node name="LightFixture8" parent="Scene/SubViewport/Environment/Lights" instance=ExtResource("9_pn6mk")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -6, 5, -15)
skeleton = NodePath("")
flicker = true

[node name="LightFixture9" parent="Scene/SubViewport/Environment/Lights" instance=ExtResource("9_pn6mk")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 8, 5, -15)
skeleton = NodePath("")

[node name="LightFixture10" parent="Scene/SubViewport/Environment/Lights" instance=ExtResource("9_pn6mk")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1, 5, 15)
skeleton = NodePath("")
flicker = true

[node name="LightFixture11" parent="Scene/SubViewport/Environment/Lights" instance=ExtResource("9_pn6mk")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -6, 5, 15)
skeleton = NodePath("")

[node name="LightFixture12" parent="Scene/SubViewport/Environment/Lights" instance=ExtResource("9_pn6mk")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 8, 5, 15)
skeleton = NodePath("")

[node name="LightFixture13" parent="Scene/SubViewport/Environment/Lights" instance=ExtResource("9_pn6mk")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1, 5, 8)
skeleton = NodePath("")

[node name="LightFixture14" parent="Scene/SubViewport/Environment/Lights" instance=ExtResource("9_pn6mk")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -6, 5, 8)
skeleton = NodePath("")
flicker = true

[node name="LightFixture15" parent="Scene/SubViewport/Environment/Lights" instance=ExtResource("9_pn6mk")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 8, 5, 8)
skeleton = NodePath("")

[node name="ParkingSpaces" parent="Scene/SubViewport/Environment" instance=ExtResource("8_cmw8g")]
skeleton = NodePath("../../../..")

[node name="ParkingSpaces2" parent="Scene/SubViewport/Environment" instance=ExtResource("8_cmw8g")]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, -4.39373, 0, 11.2571)
skeleton = NodePath("../../../..")

[node name="ParkingSpaces4" parent="Scene/SubViewport/Environment" instance=ExtResource("8_cmw8g")]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, -4.39373, 0, -11.7429)
skeleton = NodePath("../../../..")

[node name="ParkingSpaces3" parent="Scene/SubViewport/Environment" instance=ExtResource("8_cmw8g")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 4.60627, 0, -11.7429)
skeleton = NodePath("../../../..")

[node name="CameraPivot" type="Node3D" parent="Scene/SubViewport"]
script = SubResource("GDScript_vvybf")

[node name="Camera3D" type="Camera3D" parent="Scene/SubViewport/CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 2, 3)

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_otk44")
script = ExtResource("1_atnnk")

[node name="Label" type="Label" parent="MainMenu"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 107.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 48
text = "The Car Park"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/CenterContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="MainMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="OptionsButton" type="Button" parent="MainMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="ControlsButton" type="Button" parent="MainMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Controls"

[node name="QuitButton" type="Button" parent="MainMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="OptionsMenu" type="CenterContainer" parent="MainMenu"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_27pr1")

[node name="Panel" type="PanelContainer" parent="MainMenu/OptionsMenu"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/OptionsMenu/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/OptionsMenu/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="MainMenu/OptionsMenu/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Options"
horizontal_alignment = 1

[node name="Seperator" type="HSeparator" parent="MainMenu/OptionsMenu/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GameplayLabel" type="Label" parent="MainMenu/OptionsMenu/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Gameplay"

[node name="WindowMode" type="HBoxContainer" parent="MainMenu/OptionsMenu/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainMenu/OptionsMenu/Panel/MarginContainer/VBoxContainer/WindowMode"]
layout_mode = 2
text = "Window Mode"

[node name="OptionButton" type="OptionButton" parent="MainMenu/OptionsMenu/Panel/MarginContainer/VBoxContainer/WindowMode"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 2
item_count = 2
selected = 0
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Fullscreen"
popup/item_1/id = 1

[node name="AudioLabel" type="Label" parent="MainMenu/OptionsMenu/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Audio"

[node name="MasterVolume" type="HBoxContainer" parent="MainMenu/OptionsMenu/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainMenu/OptionsMenu/Panel/MarginContainer/VBoxContainer/MasterVolume"]
layout_mode = 2
text = "Volume"

[node name="Slider" type="HSlider" parent="MainMenu/OptionsMenu/Panel/MarginContainer/VBoxContainer/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
value = 50.0

[node name="Seperator2" type="HSeparator" parent="MainMenu/OptionsMenu/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DoneButton" type="Button" parent="MainMenu/OptionsMenu/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Done"

[node name="ControlsMenu" type="CenterContainer" parent="MainMenu"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = SubResource("GDScript_34e8j")

[node name="Panel" type="PanelContainer" parent="MainMenu/ControlsMenu"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/ControlsMenu/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/ControlsMenu/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="MainMenu/ControlsMenu/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Controls"
horizontal_alignment = 1

[node name="Seperator" type="HSeparator" parent="MainMenu/ControlsMenu/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label1" type="Label" parent="MainMenu/ControlsMenu/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "WASD keys to move"

[node name="Label2" type="Label" parent="MainMenu/ControlsMenu/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Move Mouse to look around"

[node name="Label3" type="Label" parent="MainMenu/ControlsMenu/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Left Mouse Button to interact"

[node name="Seperator2" type="HSeparator" parent="MainMenu/ControlsMenu/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DoneButton" type="Button" parent="MainMenu/ControlsMenu/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Done"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -42.0
offset_right = 147.0
grow_vertical = 0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
text = "By Stanley Davis for Ludum Dare 54"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_h7oej")
autoplay = true

[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/PlayButton" to="MainMenu" method="_on_play_button_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/OptionsButton" to="MainMenu" method="_on_options_button_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/ControlsButton" to="MainMenu" method="_on_controls_button_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/QuitButton" to="MainMenu" method="_on_quit_button_pressed"]
[connection signal="item_selected" from="MainMenu/OptionsMenu/Panel/MarginContainer/VBoxContainer/WindowMode/OptionButton" to="MainMenu/OptionsMenu" method="_on_option_button_item_selected"]
[connection signal="drag_ended" from="MainMenu/OptionsMenu/Panel/MarginContainer/VBoxContainer/MasterVolume/Slider" to="MainMenu/OptionsMenu" method="_on_slider_drag_ended"]
[connection signal="pressed" from="MainMenu/OptionsMenu/Panel/MarginContainer/VBoxContainer/DoneButton" to="MainMenu/OptionsMenu" method="_on_done_button_pressed"]
[connection signal="pressed" from="MainMenu/ControlsMenu/Panel/MarginContainer/VBoxContainer/DoneButton" to="MainMenu/ControlsMenu" method="_on_done_button_pressed"]
